--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7765,7 +7765,11 @@ fieldset[disabled] .form-control {
 
 /* Login Page ================================== */
 .login-page {
-  background-color: #00BCD4;
+  background-image: url("https://images.unsplash.com/photo-1551650661-777b616c1972?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   padding-left: 0;
   max-width: 360px;
   margin: 5% auto;
