--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2363,7 +2363,11 @@
 
 /* General ===================================== */
 body {
-  background-color: #e9e9e9;
+  background-image: url("https://images.unsplash.com/photo-1551650661-777b616c1972?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   -webkit-transition: all 0.5s;
@@ -7563,7 +7567,7 @@ fieldset[disabled] .form-control {
     white-space: nowrap;
     position: relative;
     border-bottom: 1px solid #e9e9e9;
-    background: url("../images/user-img-background.jpg") no-repeat no-repeat;
+    /*background: url("../images/user-img-background.jpg") no-repeat no-repeat;*/
     height: 135px; }
     .sidebar .user-info .image {
       margin-right: 12px;
